--- a/farenheittocelcius.html
+++ b/farenheittocelcius.html
@@ -31,7 +31,7 @@
         <span id = "conversion" SPAN STYLE="font-weight:bold"></span>
         </p>
         <br><br>
-        <a href="conversions.html">
+        <a href="index.html">
         <button class="button">Go Back To Home Page!</button>    
         </a>
         </center>
